--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,5 +15,11 @@
 homepage: "https://trovaprezzi.it"
 documentation: "https://tracking.trovaprezzi.it/it/gtm_template_en.html"
 versions:
+  # Latest version
+  - sha: 0e899dd8819be030ad5b00b2f5a160fcf9e6bdfe
+    changeNotes: |2
+      updated vanilla all pages
+      updated consent mode
+  # Older versions
   - sha: 4365bc5cc27df414cd33f8c204e4ec0c60c75993
     changeNotes: Initial Version
